compositing_shaders_doc/compositing_shaders_doc.css
body { font-family: sans-serif; }
code.literal { background-color: #f0f0f0; }

pre.screen {
  border: 1px solid #aaaaaa;
  background-color: #f9f9f9;
  padding: 0.3em;
}

span.underline { text-decoration: underline; }

/* Make <phrase role="italic"> render as italic */
span.italic { font-style: italic; }

/* Tests with making underline in <screen> better:
pre.screen span.underline {
  display: block;
  width: 90%;
  border-bottom: thin solid black;
  margin-bottom: 0px;
  padding-bottom: 0px;
}
*/

/* To make fog figures look good, otherwise the text stretches them too much. */
div.figure-contents table td { max-width: 400px; vertical-align: top; }

/* <figure> inside <para role="figure_2_column"> is assumed to be wider */
p.figure_2_column + div.figure {
  border: 1px solid black;
  padding-left: 1em;
  padding-right: 1em;
  padding-bottom: 1em;

  /* This must be synchronized with HTML image size set by images/html/Makefile */
  width: 850px;
}

div.figure {
  border: 1px solid black;
  padding-left: 1em;
  padding-right: 1em;
  padding-bottom: 1em;

  /* This must be synchronized with HTML image size set by images/html/Makefile */
  width: 450px;
}

/* fo_vertical_space should not appear in HTML. */
p.fo_vertical_space { display: none; }

/* make space between callouts smaller */
div.calloutlist p {
  margin-bottom: 0em; margin-top: 1em;
}

/* Center titlepage (inside parent, and center text inside) */
div.book-titlepage {
  margin-left: auto;
  margin-right: auto;
  width: 80%;
  text-align: center;
  border: thin solid black;
  padding-left: 0.5em;
  padding-right: 0.5em;
}

p.copyright { font-size: small; }
div.legalnotice { font-size: small; }

